# ld51-server

./: PROTOCOL.md  README.md  pyproject.toml
.github/workflows/: cloud-run-deploy.yaml  deploy.yaml  docker-image.yaml  python-app.yml  server-checks.yaml
deploy/container/: Dockerfile  run.sh
deploy/knative/: service.template.yaml
docs/: MESSAGES.md  PROTOCOL.md  protocol.md
ld51_server/: __init__.py  board.py  game.py  lobby.py  models.py  state.py
ld51_server/dev/: __init__.py  cmd.py  lobby.py  protocol.py  schema_value_generator.py
ld51_server/game/: board.py  board_platform.py  join_code.py  lobby.py  lobby_manager.py  player.py  router.py
ld51_server/models/: __init__.py  board.py  general.py  lobby.py  message.py  timeline.py
ld51_server/protocol/: __init__.py  base.py  error.py  game_loop.py  lobby.py  ws_close_code.py
tests/: ascii_board.py  test_game.py  test_lobby.py
tests/data/board_states/: bridge.timeline.json  bridge.txt  complex-circular.timeline.json  complex-circular.txt  complex6.txt  complex7.txt  conflict-cancel-with-push.timeline.json  conflict-cancel-with-push.txt  conflict-congo.txt  conflict-order.txt  cycle-big-weird.timeline.json  cycle-big-weird.txt  cycle-big.txt  cycle-small.txt  misc1.txt  misc2.txt  misc4.txt  misc5.txt  misc6.txt  misc7.txt  misc8.timeline.json  misc8.txt  misc9.txt  new-algo1.txt  new-algo2.txt  new-algo3.txt  new-algo4.txt  off-board-chain.timeline.json  off-board-chain.txt  push-conflict-even.txt  push-conflict-spaced.txt  push-conflict-uneven.txt  push-follow.txt  push-off.timeline.json  push-off.txt  slide-push.txt  staggered-push.timeline.json  staggered-push.txt
