[tool.poetry]
name = "ld51-server"
version = "0.1.0"
description = ""
authors = ["Simon Berger <simon@siku2.io>"]
readme = "README.md"
packages = [{ include = "ld51_server" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
websockets = "^10.3"
networkx = "^2.8.7"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^22.8.0"
pytest = "^7.1.3"
pylint = "^2.15.3"
uvicorn = "^0.18.3"

[tool.poe.tasks]
run = "uvicorn ld51_server:app --reload"
test = "pytest"
lint = "pylint ld51_server/"
_sort_imports = "isort ."
_format = "black ."
format = ["_sort_imports", "_format"]
print-message-schema = { "script" = "ld51_server.dev.cmd:print_message_schema" }

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
